- FIX Dashboard on Mobile Version

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -553,7 +553,7 @@ h6 {
 
 .wrap-floats {
   overflow: hidden; }
-.dashboard-console{
+.qc-content{
   display: none;
 }
 .mobile_item--link-wrapper {
